<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/mainbg"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <RelativeLayout
        android:id="@+id/rl"
        android:background="@color/blue"
        android:layout_width="match_parent"
        android:layout_height="250dp">


        <TextView
            android:layout_marginTop="50dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/app_name"
          android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>

    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="-100dp"
        android:layout_below="@id/rl"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:onClick="addNew"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            android:elevation="10dp"
            android:layout_weight="1"
            android:layout_height="200dp">

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:text="@string/Add_Animal"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </TextView>

            </RelativeLayout>



        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:onClick="goToTypes"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            android:elevation="10dp"
            android:layout_weight="1"
            android:layout_height="200dp">

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:text="@string/Existind_Animals"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </TextView>

            </RelativeLayout>



        </androidx.cardview.widget.CardView>

    </LinearLayout>

</RelativeLayout>