<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/typebg"
    tools:context=".TypesActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:onClick="airAnimals"
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            android:elevation="10dp"
            android:layout_height="100dp">

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/air_animals"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </TextView>

            </RelativeLayout>



        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:onClick="landAnimals"
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            android:elevation="10dp"
            android:layout_height="100dp">

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/land_animals"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </TextView>

            </RelativeLayout>



        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:onClick="waterAnimals"
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            android:elevation="10dp"
            android:layout_height="100dp">

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/water_animals"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </TextView>

            </RelativeLayout>



        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:onClick="insects"
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            android:elevation="10dp"
            android:layout_height="100dp">

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/insects"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </TextView>

            </RelativeLayout>



        </androidx.cardview.widget.CardView>


    </LinearLayout>



</RelativeLayout>